syntax = "proto3";

package greet;
option go_package = "grpcLearning/greet/proto";

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string response = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
}